# ConanTest

./: README.md
app/: CMakeLists.txt  conanfile.txt
app/src/: example.cpp
lib/: CMakeLists.txt  conanfile.py
lib/src/: lib.cpp  lib.h
